include/altdss/capi/alt.h

    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumEndElements(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumSections(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumBranchesInZone(void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_CalcCurrent(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Set_CalcCurrent(void* elem, const double* ValuePtr, int32_t valueCount);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_AllocFactors(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Set_AllocFactors(void* elem, const double* ValuePtr, int32_t valueCount);
    ALTDSS_CAPI_DLL void Alt_Meter_DoReliabilityCalc(void* elem, altdss_bool_t assumeRestoration);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_ZonePCEs(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_EndElements(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_BranchesInZone(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_SequenceList(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_Loads(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL double Alt_MeterSection_AvgRepairTime(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL double Alt_MeterSection_FaultRateXRepairHours(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_NumBranches(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_NumCustomers(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_OCPDeviceType(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL double Alt_MeterSection_SumBranchFaultRates(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_SequenceIndex(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_TotalCustomers(void* elem, int32_t idx);