src/CAPI/CAPI_Alt.pas

        
    Result := elem.ActiveCircuit.Buses[PD_Element.Terminals[PD_Element.FromTerminal - 1].BusRef].BusTotalNumCustomers;
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_CalcCurrent(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
var
    Result: PDoubleArray0;
    k: Integer;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, elem.NPhases);
    for k := 0 to elem.NPhases - 1 do
        Result[k] := Cabs(elem.CalculatedCurrent[k + 1]);
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Set_CalcCurrent(elem: TEnergyMeterObj; ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i: Integer;
begin
    if ValueCount <> elem.NPhases then
    begin
        DoSimpleMsg(DSSPrime, _('The provided number of values does not match the element''s number of phases.'), 5025);
        Exit;
    end;
    Value := PDoubleArray0(ValuePtr);
    for i := 1 to elem.NPhases do
        elem.CalculatedCurrent[i] := Value[i - 1];   // Just set the real part
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_AllocFactors(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
begin
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, elem.NPhases);
    Move(elem.PhsAllocationFactor[1], ResultPtr^, ResultCount^ * SizeOf(Double));
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Set_AllocFactors(elem: TEnergyMeterObj; ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i: Integer;
begin
    Value := PDoubleArray0(ValuePtr);
    if ValueCount <> elem.NPhases then
    begin
        DoSimpleMsg(DSSPrime, _('The provided number of values does not match the element''s number of phases.'), 5026);
        Exit;
    end;
    for i := 1 to elem.NPhases do
    begin
        elem.PhsAllocationFactor[i] := Value[i - 1];
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_DoReliabilityCalc(elem: TEnergyMeterObj; AssumeRestoration: TAPIBoolean); CDECL;
begin
    elem.AssumeRestoration := AssumeRestoration;
    elem.CalcReliabilityIndices();
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_ZonePCEs(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
var
   k: integer;
begin
    elem.GetPCEatZone(True);
    if not ((Length(elem.ZonePCE) > 0) and (elem.ZonePCE[0] <> NIL)) then
        Exit;
        
    DSS_RecreateArray_PPointer(ResultPtr, ResultCount, length(elem.ZonePCE));
    Move(elem.ZonePCE[0], ResultPtr^, ResultCount^ * SizeOf(Pointer));
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_EndElements(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
var
    Result: PPointerArray0;
    k, num: Integer;
    node: TCktTreeNode;
begin
    ResultCount[0] := 0;
    if not elem.CheckBranchList(5502) then
        Exit;
    if elem.BranchList.ZoneEndsList = NIL then
        Exit;

    num := elem.BranchList.ZoneEndsList.NumEnds;
    DSS_RecreateArray_PPointer(Result, ResultPtr, ResultCount, num);
    for k := 0 to num - 1 do
    begin
        elem.BranchList.ZoneEndsList.Get(k + 1, node);
        Result[k] := node.CktObject;
    end;
end;
//------------------------------------------------------------------------------
function Alt_Meter_Get_NumEndElements(elem: TEnergyMeterObj): Integer; CDECL;
begin
    Result := 0;
    if not elem.CheckBranchList(5500) then
        Exit;

    if elem.BranchList.ZoneEndsList = NIL then
        Exit;

    Result := elem.BranchList.ZoneEndsList.NumEnds;
end;
//------------------------------------------------------------------------------
function Alt_Meter_Get_NumSections(elem: TEnergyMeterObj): Integer; CDECL;
begin
    Result := elem.SectionCount;
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_BranchesInZone(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
var
    Result: PPointerArray0;
    k: Integer;
    BranchCount: Integer;
    pElem: TDSSCktElement;
begin
    ResultCount[0] := 0;
    if not elem.CheckBranchList(5501) then
        Exit;

    // Get count of branches
    BranchCount := Alt_Meter_Get_NumBranchesInZone(elem);
    if BranchCount <= 0 then 
        Exit;
        
    DSS_RecreateArray_PPointer(Result, ResultPtr, ResultCount, BranchCount);
    pElem := elem.BranchList.First();
    k := 0;
    while pElem <> NIL do
    begin
        Result[k] := pElem;
        inc(k);
        pElem := elem.BranchList.GoForward();
    end;
end;
//------------------------------------------------------------------------------
function Alt_Meter_Get_NumBranchesInZone(elem: TEnergyMeterObj): Integer; CDECL;
var
    pElem : TDSSCktElement;
begin
    Result := 0;
    if elem.BranchList = NIL then //TODO: error/warning?
        Exit;

    pElem := elem.BranchList.First();
    while pElem <> NIL do
    begin
        Inc(Result);
        pElem := elem.BranchList.GoForward();
    end;
end;
//------------------------------------------------------------------------------
function checkSectionIdx(elem: TEnergyMeterObj; idx: Integer; out psec: PFeederSection): Boolean;
begin
    if (idx <= 0) or (idx > elem.SectionCount) then
    begin
        if DSS_CAPI_EXT_ERRORS then
            elem.DoSimpleMsg(_('Invalid active section. Has SetActiveSection been called?'), 5055);
        psec := NIL;
        Result := false;
        Exit;
    end;
    psec := @elem.FeederSections[idx];
    Result := true;
end;

function Alt_MeterSection_AvgRepairTime(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.AverageRepairTime;
end;

function Alt_MeterSection_FaultRateXRepairHours(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.SumFltRatesXRepairHrs;
end;

function Alt_MeterSection_NumBranches(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.NBranches;
end;

function Alt_MeterSection_NumCustomers(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.NCustomers;
end;

function Alt_MeterSection_OCPDeviceType(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.OCPDeviceType;
end;

function Alt_MeterSection_SumBranchFaultRates(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.SumBranchFltRates;
end;

function Alt_MeterSection_SequenceIndex(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.SeqIndex;
end;

function Alt_MeterSection_TotalCustomers(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
var
    psection: PFeederSection;
begin
    Result := 0;
    if not checkSectionIdx(elem, idx, psection) then
        Exit;
    Result := psection^.TotalCustomers;
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_SequenceList(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
begin
    ResultCount[0] := 0;
    if (not checkSequenceList(elem)) then
        Exit;

    DSS_RecreateArray_PPointer(ResultPtr, ResultCount, elem.SequenceList.Count);
    Move(elem.SequenceList.InternalPointer^, ResultPtr^, ResultCount^ * SizeOf(Pointer));
end;
//------------------------------------------------------------------------------
procedure Alt_Meter_Get_Loads(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
begin
    ResultCount[0] := 0;
    if (not checkLoadList(elem)) then
        Exit;

    DSS_RecreateArray_PPointer(ResultPtr, ResultCount, elem.LoadList.Count);
    Move(elem.LoadList.InternalPointer^, ResultPtr^, ResultCount^ * SizeOf(Pointer));
end;
//------------------------------------------------------------------------------
end.
